# BaseGameEngineGDSJam2Fork

./: Actor.cpp  Actor.h  AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  Character.cpp  Character.h  EActorType.h  GameJamWorld.cpp  GameJamWorld.h  GameWorld.cpp  GameWorld.h  GlobalConstants.h  README.md  SnakeGame.cpp  SnakeGame.h  TVector2D.h  main.cpp
MiniGamePlayers/: SnakePlayer.cpp  SnakePlayer.h
